@@ -1,3 +1,6 @@
+Changes from FRESA.CAD 3.4.8 to FRESA.CAD version 3.4.9
+	-CV improvements to handle interdependent testing set
+	-Documentation revisions and missing documentation links
 Changes from FRESA.CAD 3.4.7 to FRESA.CAD version 3.4.8
     -Bagged predict with predict fitting
 	-ILLA Bootstraping attributes
